[gd_scene load_steps=3 format=3 uid="uid://dvkfb6p8rrrwb"]

[ext_resource type="Script" uid="uid://ckukrgykl8uua" path="res://pause_menu/pause_menu.gd" id="1_hdmo1"]
[ext_resource type="Texture2D" uid="uid://ds4y0ykv5heqj" path="res://pause_menu/textures/pause_screen.png" id="2_rd7dy"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("pause_menu")]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_hdmo1")
pause_menu = NodePath(".")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.025
anchor_bottom = -0.025
offset_left = 433.0
offset_top = 120.0
offset_right = 571.0
offset_bottom = 292.0
scale = Vector2(3, 3)
texture = ExtResource("2_rd7dy")
stretch_mode = 2

[node name="Resume" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 572.0
offset_top = 232.0
offset_right = 776.0
offset_bottom = 295.0
text = "Resume"

[node name="Quit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 576.0
offset_top = 331.0
offset_right = 748.0
offset_bottom = 400.0
text = "Quit"

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
